--- a/assets/javascripts/discourse/templates/connectors/user-card-post-names/show_on_profile.hbs
+++ b/assets/javascripts/discourse/templates/connectors/user-card-post-names/show_on_profile.hbs
@@ -2,7 +2,7 @@
 <script>
 console.log(uf.field);
 </script>
-      {{#if uf.field=="show_on_profile"}} value=uf.value}}
+      {{#if uf.field=="show_on_profile"}}
         <br/><h2>{{uf.value}}</h2>
       {{/if}}
 {{/each}}		  
