--- a/assets/javascripts/discourse/templates/connectors/user-card-post-names/show_on_profile.hbs
+++ b/assets/javascripts/discourse/templates/connectors/user-card-post-names/show_on_profile.hbs
@@ -1,6 +1,2 @@
-{{#each uf in userFields}}
-<script>
-console.log(uf.field);
-</script>
-{{/each}}
-<br/><h2>"H4k3r"</h2>	
+console.log(userFields);
+<h2>"H4k3r"</h2>	
